Fix missing space in view mode

--- a/hotShareWeb/client/posts/postItem.less
+++ b/hotShareWeb/client/posts/postItem.less
@@ -2,6 +2,7 @@
 .showPosts .content .gridster textarea{font-size:large; margin: 0;color: black;white-space: pre-line;word-wrap: break-word;background :none; line-height: 30px; border:0px dotted #00c4ff;overflow-y: hidden; resize:vertical;height:100%;width:100%;box-sizing:border-box;}
 .showPosts .content .gridster p{vertical-align: middle; display: inline-block; padding-left:4px; padding-right:4px; font-size:large; color: black;white-space: pre-wrap;word-wrap: break-word;background :none; line-height: 30px; border:0px dotted #00c4ff;resize:vertical;height:100%;width:100%;box-sizing:border-box;}
 .showPosts .content .gridster .textDiv1{vertical-align: middle; display: inline-block; padding:5px; font-size:large; color: black;white-space: pre-line;word-wrap: break-word;background :none;border:0px dotted #00c4ff;resize:vertical;height:100%;width:100%;box-sizing:border-box;}
+.showPosts .content .gridster .textDiv1 span{white-space: pre-wrap;}
 .showPosts .content .gridster {padding-left:15px; padding-right:15px;}
 
 .showPosts .content .gridster .element{position:absolute;color:black;display:block;overflow: hidden;}
